<resources>
    <string name="app_name">AlertaMovilApp</string>

    <string name="contrasena_hint">Contraseña</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_correo_electronico_hint">Correo electrónico</string>
    <string name="registro_nombre_hint">Nombre</string>
    <string name="registro_apellido_hint">Apellido</string>
    <string name="registro_correo_electronico_hint">Correo electrónico</string>
    <string name="registro_contrasena_hint">Contraseña</string>
    <string name="registro_confirmar_contrasena_hint">Confirmar contraseña</string>
    <string name="registro_numero_celular_hint">Número Celular (Opcional)</string>
    <string name="registro_fecha_de_nacimiento_hint">Fecha de Nacimiento (dd/mm/aa)</string>
    <string name="registro_ciudad_hint">Ciudad</string>
    <string name="title_activity_maps">Map</string>
</resources>
