<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:id="@+id/layout">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:layout_marginBottom="8dp"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_form" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_form"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nombreWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombre"
                    android:hint="@string/registro_nombre_hint"
                    android:inputType="textPersonName"
                    android:layout_gravity="right"
                    android:capitalize="sentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/apellidoWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/apellido"
                    android:hint="@string/registro_apellido_hint"
                    android:inputType="textPersonName"
                    android:layout_gravity="right"
                    android:capitalize="sentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/registro_correo_electronico_hint"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/registro_contrasena_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmpasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/confirmpassword"
                    android:hint="@string/registro_confirmar_contrasena_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/numerocelularWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/numerocelular"
                    android:hint="@string/registro_numero_celular_hint" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Fecha: "
                    android:id="@+id/textView12"
                    android:textColor="#7d7d7d"
                    android:textSize="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fechadiaWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/fechaDia"
                        android:layout_weight="0"
                        android:hint="dd"
                        android:gravity="center"
                        android:maxLength="2" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="/"
                    android:id="@+id/textView13"
                    android:textColor="#7d7d7d" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fechamesrWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="0"
                    android:hint="mm"
                    android:gravity="center"
                    android:maxLength="2" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="/"
                    android:id="@+id/textView14"
                    android:textColor="#7d7d7d" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fechanoWrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText3"
                    android:layout_weight="0"
                    android:hint="aaaa"
                    android:gravity="center"
                    android:maxLength="4" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Ciudad"
                    android:id="@+id/textView15"
                    android:textColor="#7d7d7d"
                    android:textSize="20dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ciudad_spinner"/>
            </LinearLayout>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:id="@+id/btn_signup"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Ya eres miembro? Login"
                android:id="@+id/link_login"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textSize="18dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
